--- a/index.html
+++ b/index.html
@@ -11,7 +11,48 @@
 </head>
 <body>
     <div class="profile-card">
-        <div class="image"><img src="" alt="" class="profile-image"></div>
+        <div class="image">
+            <img src="profile.jpg" alt="" class="profile-image">
+        </div>
+        <div class="text-data">
+            <span class="name">Test User</span>
+            <span class="job">Youtuber & Blogger</span>
+        </div>
+        <div class="media-buttons">
+            <a href="#" style="background-color: #4267b2;" class="link">
+                <i class='bx bxl-facebook'></i>
+            </a>
+            <a href="#" style="background-color: #e1306c;" class="link">
+                <i class='bx bxl-instagram' ></i>
+            </a>
+            <a href="#"  style="background-color: #1da1f2;" class="link">
+                <i class='bx bxl-twitter' ></i>
+            </a>
+            <a href="#" style="background-color: #ff0000;" class="link">
+                <i class='bx bxl-youtube' ></i>
+            </a>
+        </div>
+
+        <div class="buttons">
+            <button class="button">Subscribe</button>
+            <button class="button">Message</button>
+        </div>
+
+        <div class="analytics">
+            <div class="data">
+                <i class='bx bx-heart'></i>
+                <span class="number">60k</span>
+            </div>
+            <div class="data">
+                <i class='bx bx-message-rounded'></i>
+                <span class="number">20k</span>
+            </div>
+            <div class="data">
+                <i class='bx bx-share'></i>
+                <span class="number">12k</span>
+            </div>
+            
+        </div>
     </div>
 </body>
 </html>
